<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.test.food.ui.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLoginBackground">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/dp_88"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_32"
            android:src="@drawable/ic_logo1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_16"
            android:text="@string/word_login"
            android:textColor="@color/colorText"
            android:textSize="@dimen/sp_28"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_message_login"
            app:layout_constraintStart_toStartOf="@id/iv_logo"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_message_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_28"
            android:layout_marginBottom="@dimen/dp_32"
            android:text="@string/word_message_login"
            android:textColor="@color/colorSecondText"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toTopOf="@id/til_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/iv_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_mail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_12"
            android:textColorHint="@color/colorSecondText"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/dp_12"
            app:boxCornerRadiusBottomStart="@dimen/dp_12"
            app:boxCornerRadiusTopEnd="@dimen/dp_12"
            app:boxCornerRadiusTopStart="@dimen/dp_12"
            app:boxStrokeColor="@drawable/input_text_border"
            app:boxStrokeWidth="@dimen/dp_1"
            app:boxStrokeWidthFocused="@dimen/dp_1"
            app:helperTextId="@{viewmodel.usernameErrorId}"
            app:helperTextTextColor="@color/colorSplashBackground"
            app:layout_constraintBottom_toTopOf="@id/til_password"
            app:layout_constraintEnd_toEndOf="@id/til_password"
            app:layout_constraintStart_toStartOf="@id/til_password"
            app:startIconDrawable="@drawable/ic_outline_account_circle_24"
            app:startIconTint="@color/colorSplashBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:hint="@string/word_email_address"
                android:text="@={viewmodel.username}"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorSecondText"
                android:textSize="@dimen/sp_15"
                android:textStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_24"
            android:textColorHint="@color/colorSecondText"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/dp_12"
            app:boxCornerRadiusBottomStart="@dimen/dp_12"
            app:boxCornerRadiusTopEnd="@dimen/dp_12"
            app:boxCornerRadiusTopStart="@dimen/dp_12"
            app:boxStrokeColor="@drawable/input_text_border"
            app:boxStrokeWidth="@dimen/dp_1"
            app:boxStrokeWidthFocused="@dimen/dp_1"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorEyePassword"
            app:helperTextId="@{viewmodel.passwordErrorId}"
            app:helperTextTextColor="@color/colorSplashBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_outline_lock_24"
            app:startIconTint="@color/colorSplashBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:hint="@string/word_password"
                android:inputType="textPassword"
                android:text="@={viewmodel.password}"
                android:textColor="@color/colorText"
                android:textSize="@dimen/sp_15"
                android:textStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_forget_password"
            android:textColor="@color/colorText"
            android:textSize="@dimen/sp_17"
            app:layout_constraintBottom_toTopOf="@id/cv_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_login"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_60"
            android:onClick="@{() -> viewmodel.onLoginButtonClick()}"
            android:outlineAmbientShadowColor="@color/colorSplashBackground"
            android:outlineSpotShadowColor="@color/colorSplashBackground"
            app:cardBackgroundColor="@color/colorSplashBackground"
            app:cardCornerRadius="@dimen/dp_30"
            app:cardElevation="15dp"
            app:layout_constraintBottom_toTopOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password"
            app:layout_constraintVertical_bias="0.65">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/word_login"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_24" />
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_32"
            android:layout_marginEnd="@dimen/dp_8"
            android:background="#e6e6e6"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toStartOf="@id/tv_or"
            app:layout_constraintStart_toStartOf="@id/cl_facebook"
            app:layout_constraintTop_toTopOf="@id/tv_or" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:text="@string/word_or"
            android:textColor="#bababc"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/cl_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_32"
            android:background="#e6e6e6"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="@id/cl_google"
            app:layout_constraintStart_toEndOf="@id/tv_or"
            app:layout_constraintTop_toTopOf="@id/tv_or" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_facebook"
            android:layout_width="@dimen/dp_164"
            android:layout_height="@dimen/dp_60"
            android:layout_marginBottom="@dimen/dp_32"
            android:background="@drawable/bg_button_facebook_google"
            app:layout_constraintBottom_toTopOf="@id/tv_have_account"
            app:layout_constraintEnd_toStartOf="@id/cl_google"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:scaleType="centerInside"
                android:src="@drawable/ic_facebook"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_facebook"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/word_facebook"
                android:textColor="@color/colorText"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/iv_facebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@id/iv_facebook"
                app:layout_constraintTop_toTopOf="@id/iv_facebook" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_google"
            android:layout_width="@dimen/dp_164"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@drawable/bg_button_facebook_google"
            app:layout_constraintBottom_toBottomOf="@id/cl_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/cl_facebook"
            app:layout_constraintTop_toTopOf="@id/cl_facebook">

            <ImageView
                android:id="@+id/iv_google"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:src="@drawable/ic_google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_google"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:includeFontPadding="false"
                android:text="@string/word_gmail"
                android:textColor="@color/colorText"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/iv_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@id/iv_google"
                app:layout_constraintTop_toTopOf="@id/iv_google" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_36"
            android:text="@string/word_don_t_have_an_account"
            android:textColor="@color/colorSecondText"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_create_account"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/word_create_account"
            android:textColor="@color/colorSplashBackground"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/tv_have_account"
            app:layout_constraintTop_toTopOf="@id/tv_have_account" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>