<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.test.food.ui.fragments.home.HomeViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_gradient_home"
            android:layout_width="0dp"
            android:layout_height="100dp"/>
        <androidx.core.widget.NestedScrollView
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:overScrollMode="never"
            android:layout_width="0dp"
            android:layout_height="0dp">
            <LinearLayout
                android:id="@+id/ll_container"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginBottom="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_logo"
                        android:src="@drawable/ic_logo1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_margin="16dp"
                        android:layout_width="44dp"
                        android:layout_height="44dp"/>

                    <TextView
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/iv_logo"
                        app:layout_constraintBottom_toBottomOf="@id/iv_logo"
                        android:text="@string/word_miami"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        app:drawableStartCompat="@drawable/ic_outline_location_on_24"
                        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

                    <ImageView
                        android:id="@+id/iv_notification"
                        android:src="@drawable/ic_outline_notifications_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/iv_logo"
                        app:layout_constraintBottom_toBottomOf="@id/iv_logo"
                        android:layout_marginEnd="20dp"
                        android:layout_width="26dp"
                        android:layout_height="26dp"/>

                    <View
                        android:id="@+id/v_dot_notification"
                        android:layout_margin="2dp"
                        app:layout_constraintTop_toTopOf="@id/iv_notification"
                        app:layout_constraintEnd_toEndOf="@id/iv_notification"
                        android:background="@drawable/bg_dot_notification"
                        android:layout_width="4dp"
                        android:layout_height="4dp"/>

                    <TextView
                        android:id="@+id/tv_title"
                        android:text="@string/word_let_s_eat_quality_food"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/iv_logo"
                        app:layout_constraintTop_toBottomOf="@id/iv_logo"
                        android:layout_marginTop="28dp"
                        android:lineHeight="32dp"
                        android:textColor="@color/colorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        app:layout_constraintStart_toEndOf="@id/tv_title"
                        app:layout_constraintBottom_toBottomOf="@id/tv_title"
                        android:src="@drawable/ic_tongue_emoji"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="2dp"
                        android:layout_width="28dp"
                        android:layout_height="28dp"/>

                    <LinearLayout
                        android:id="@+id/ll_search"
                        android:background="@drawable/bg_search"
                        android:layout_marginTop="28dp"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="@id/iv_logo"
                        app:layout_constraintTop_toBottomOf="@id/tv_title"
                        app:layout_constraintEnd_toStartOf="@id/iv_options"
                        android:layout_marginEnd="16dp"
                        android:layout_width="0dp"
                        android:layout_height="48dp">

                        <ImageView
                            android:layout_marginStart="16dp"
                            android:src="@drawable/ic_round_search_24"
                            app:tint="@color/colorSecondText"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginStart="16dp"
                            android:layout_gravity="center"
                            android:textColor="@color/colorSecondText"
                            android:textSize="14sp"
                            android:text="@string/word_search_restaurant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_options"
                        android:background="@drawable/bg_button_options"
                        android:src="@drawable/ic_sliders"
                        android:rotation="90"
                        android:rotationX="180"
                        android:padding="10dp"
                        app:layout_constraintTop_toTopOf="@id/ll_search"
                        app:layout_constraintBottom_toBottomOf="@id/ll_search"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        android:layout_width="48dp"
                        android:layout_height="48dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>